--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -1,7 +1,7 @@
 // comienza edicion para el footer
 
 footer {
-    background-color: #333;
+    background-color: #090232;
     color: white;
     text-align: center;
     padding: 10px;
@@ -20,6 +20,6 @@ footer {
     }
     .social-icons a {
         margin-right: 15px;
-        color: #d2d20a;
+        color: gold;
     }
 }
